# https://packaging.python.org/tutorials/packaging-projects/

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "aioaquarea"
version = "0.3.8"
authors = [
  { name="Carlos J. Aliaga", email="dev@cjaliaga.net" },
]
description = "Asynchronous library to control Panasonic Aquarea devices"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp",
  'StrEnum; python_version < "3.11"'
]

[project.urls]
"Homepage" = "https://github.com/cjaliaga/aioaquarea"
"Bug Tracker" = "https://github.com/cjaliaga/aioaquarea/issues"

[tool.black]
target-version = ["py39", "py310", "py311"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
